fix: Align 'about me' elements in small screens

--- a/assets/css/about/about-img.css
+++ b/assets/css/about/about-img.css
@@ -4,6 +4,6 @@
 
 @media screen and (max-width: 768px) {
     .about__img {
-        width: auto
+        width: 80%;
     }
 }
