--- a/assets/css/about/about.css
+++ b/assets/css/about/about.css
@@ -7,12 +7,7 @@
 
 @media screen and (max-width: 768px) {
     .about {
-        display: flex;
-        justify-content: space-between; 
-        justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        flex-direction: column;
         padding: 100px 0;
     }
 }
